# cmake-test

./: CMakeLists.txt
.ccls-cache/@@home@noemi@programs@c-c++@cmake_tutorial/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  (+243 more)
src/: vec.cpp
(+6 files in other folders)
